--- a/.github/workflows/executor-cd.yml
+++ b/.github/workflows/executor-cd.yml
@@ -13,7 +13,7 @@ on:
 
 jobs:
   call-external:
-    uses: jina-ai/workflows-executors/.github/workflows/cd.yml@master
+    uses: jina-ai/workflows-executors/.github/workflows/cd.yml@v0.1
     with:
       event_name: ${{ github.event_name }}
     secrets:
